070 ==> 159824 - Show videos in Slideshow.
071 ==> 372755 - CASIO EX-Z750.
072 ==> 366387 - Video (mts and mov) not played (neither from camera nor local file).
073 ==> 348933 - When in slideshow mode digikam can't play video files.
074 ==> 330112 - No Thumbnails for video files - ffmpegthumbnailer works perfectly outside of digikam
075 ==> 222319 - Videos are not played in slideshow.
076 ==> 281718 - Thumbnails only generate for certain video files but not others even though all from same camera on same day.
077 ==> 280755 - Need thumbnail for video items instead of generic icon.
078 ==> 373715 - Renaming popup stays when file with new name already exists.
079 ==> 301029 - Meaningless video preview.
080 ==> 242799 - digiKam segfaults when opening video.
081 ==> 260594 - digiKam crashed when starting video playback.
082 ==> 230985 - digiKam veiwing album click on video file program crashed.
083 ==> 151539 - Usability - scrolling into video takes long time without visual indication to user.
084 ==> 332074 - Crash while playing video and adding a color-tag.
085 ==> 336309 - digiKam crashes when opening video.
086 ==> 335996 - Crash when try opening video.
087 ==> 336594 - digiKam crash when try to look at video.
088 ==> 225731 - digiKam no preview icon for video.
089 ==> 096133 - digiKam to play video.
090 ==> 091538 - Optionally don't generate thumbnails for video files.
091 ==> 151540 - usability: video view is missing some play/stop/pause buttons.
092 ==> 372485 - Video thumbnails not created on OS X (Linux works fine since 5.3).
093 ==> 370228 - Thumbnail generation fails on video files.
094 ==> 216655 - Add video files support in Advanced slideshow.
095 ==> 248586 - Advanced slide show should also use videos like normal slide show.
096 ==> 139690 - Include videos to slideshow.
097 ==> 373606 - digiKam crash on exit.
098 ==> 373954 - Tags are not written to images in Iptc.Application2.Keywords.
099 ==> 373754 - Cannot Shorten Face Tag Name.
100 ==> 